--- a/db/locales/en.json
+++ b/db/locales/en.json
@@ -1,6 +1,8 @@
 {
 	"Monolith_3": "Monolith 2 (COP, with gas mask filter)",
 	"Bandit_1": "Bandit 1",
-	"Freedom_1": "Freedom 1",
-	"Stalker_2": "Loner 2"
+	"Freedom_1": "Freedom",
+	"Stalker_2": "Loner 2",
+	"ClearSky_1": "Clear Sky",
+	"Duty_1": "Duty"
 }
